--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -70,4 +70,16 @@
     <h2>Error</h2>
     <h4>{{leaderErrMess}}</h4>
   </div>
+
+  <ion-fab right bottom>
+    <button ion-fab color="accent"><ion-icon name="arrow-dropup"></ion-icon></button>
+    <ion-fab-list side="top">
+      <button ion-fab class="btn-mail"><ion-icon name="mail"></ion-icon></button>
+      <button ion-fab class="btn-google-plus"><ion-icon name="logo-googleplus"></ion-icon></button>
+      <button ion-fab class="btn-youtube"><ion-icon name="logo-youtube"></ion-icon></button>
+      <button ion-fab class="btn-twitter"><ion-icon name="logo-twitter"></ion-icon></button>
+      <button ion-fab class="btn-facebook"><ion-icon name="logo-facebook"></ion-icon></button>
+      <button ion-fab class="btn-linkedin"><ion-icon name="logo-linkedin"></ion-icon></button>
+    </ion-fab-list>
+  </ion-fab>
   </ion-content>
