splitpane_alerttosat_grid

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -10,12 +10,45 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>About Us</ion-title>
+    <ion-title>Contact Us</ion-title>
   </ion-navbar>
 
 </ion-header>
-
+  
 
 <ion-content padding>
+    <ion-card >
+        <ion-card-content>
+          <ion-card-title>
+            <h2> Location Information </h2>
+          </ion-card-title>
+          <br>
+          <p>
+          405 Kendrick Road
+          716 University Park
+          Rochester
+          </p>
+          <ion-icon name="call" item-left clear small>:+571 526 8726</ion-icon>
+          <ion-icon name="mail" item-left clear small>:czhang48@ur.rochester.edu</ion-icon>
+        </ion-card-content>
+    
+      <ion-row>
+        <ion-col>
+          <button ion-button icon-left clear small>
+            <ion-icon name="call"></ion-icon>
+            <div>CALL</div>
+          </button>
+        </ion-col>
+        <ion-col>
+          <button ion-button icon-left clear small>
+            <ion-icon name="mail"></ion-icon>
+            <div>EMAIL</div>
+          </button>
+        </ion-col>
+      </ion-row>
+    
+      </ion-card>
 
 </ion-content>
+
+
