--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -19,14 +19,19 @@
 <ion-content class="card-background-page">
 
   <div *ngIf="dishes">
-  <ion-card *ngFor="let dish of dishes" 
-  (click)="dishSelected($event, dish)" 
+  <ion-grid>
+  <ion-row>
+    <ion-col col-12 col-lg-4 *ngFor="let dish of dishes">
+  <ion-card (click)="dishSelected($event, dish)" 
   (pan)="addToFavorites(dish)">
   
     <img src="{{BaseURL + dish.image}}"/>
     <div class="card-title">{{dish.name}}</div>
     <div class="card-subtitle">{{dish.description}}</div>
   </ion-card>
+  </ion-col>
+  </ion-row>
+</ion-grid>
   </div>
   <div [hidden]="dishes || errMess">
     <ion-spinner></ion-spinner>
