--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -40,7 +40,7 @@
           </button>
         </ion-col>
         <ion-col>
-          <button ion-button icon-left clear small>
+          <button ion-button icon-left clear small (click)="sendEmail()">
             <ion-icon name="mail"></ion-icon>
             <div>EMAIL</div>
           </button>
